--- a/livraria-orig/WebContent/livro.xhtml
+++ b/livraria-orig/WebContent/livro.xhtml
@@ -8,22 +8,26 @@
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
+		<h:messages />
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 
 				<h:outputLabel value="Titulo:" for="titulo" />
-				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" />
+				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" required="true" requiredMessage="título obrigatório" validatorMessage="título não pode ser superior a 40">
+					<f:validateLength maximum="40" />
+				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}"/>
 
 				<h:outputLabel value="Preço:" for="preco" />
 				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
 
 				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-				<h:inputText id="dataLancamento"
-					value="#{livroBean.livro.dataLancamento}" />
+				<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
+				</h:inputText>
 
 			</h:panelGrid>
 		</fieldset>
@@ -42,9 +46,24 @@
 				</h:column>
 			</h:dataTable>
 		</fieldset>
-	
 		<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
 	</h:form>
+	
+	<h:dataTable value="#{livroBean.livros}" var="livro">
+		<h:column>
+			<f:facet name="header">Titulo</f:facet>
+			<h:outputText value="#{livro.titulo}" />
+		</h:column>
+		<h:column>
+			<f:facet name="header">ISBN</f:facet>
+			<h:outputText value="#{livro.isbn}" />
+		</h:column>
+		<h:column>
+			<f:facet name="header">Preço</f:facet>
+			<h:outputText value="#{livro.preco}" />
+		</h:column>
+	</h:dataTable>
+	
 </h:body>
 
 </html>
