--- a/livraria-orig/WebContent/livro.xhtml
+++ b/livraria-orig/WebContent/livro.xhtml
@@ -22,11 +22,13 @@
 				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}"/>
 
 				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
+				<h:inputText id="preco" value="#{livroBean.livro.preco}">
+					<f:validateDoubleRange minimum="1.00" maximum="1000.00" />
+				</h:inputText>
 
 				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
 				<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento.time}">
-					<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" />
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
 				</h:inputText>
 
 			</h:panelGrid>
@@ -61,6 +63,12 @@
 		<h:column>
 			<f:facet name="header">Preço</f:facet>
 			<h:outputText value="#{livro.preco}" />
+		</h:column>
+		<h:column>
+		  <f:facet name="header">Data</f:facet>
+		  <h:outputText value="#{livro.dataLancamento.time}">
+		      <f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+		  </h:outputText>
 		</h:column>
 	</h:dataTable>
 	
