--- a/livraria-orig/WebContent/livro.xhtml
+++ b/livraria-orig/WebContent/livro.xhtml
@@ -4,11 +4,16 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	>
+	
+<h:head />
 
 <h:body>
 	<h1>Novo Livro</h1>
+	
 	<h:form>
-		<h:messages />
+	
+		<h:messages id="messages" />
+		
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
@@ -16,10 +21,13 @@
 				<h:outputLabel value="Titulo:" for="titulo" />
 				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" required="true" requiredMessage="título obrigatório" validatorMessage="título não pode ser superior a 40">
 					<f:validateLength maximum="40" />
+					<f:ajax event="blur" render="messages"/>
 				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}"/>
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}">
+					<f:ajax event="keyup" render="messages"/>
+				</h:inputText>
 
 				<h:outputLabel value="Preço:" for="preco" />
 				<h:inputText id="preco" value="#{livroBean.livro.preco}">
@@ -36,22 +44,33 @@
 		
 		<fieldset>
 			<legend>Dados do Autor</legend>
+			
 			<h:outputLabel value="Selecione Autor:" for="autor" />
-			<h:selectOneMenu value="#{livroBean.autorId}"> 
+			<h:selectOneMenu value="#{livroBean.autorId}" id="autor"> 
 				<f:selectItems value="#{livroBean.autores}" var="autor" itemLabel="#{autor.nome}" itemValue="#{autor.id}" />			
 			</h:selectOneMenu>
-			<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}" />
 			
-			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+			<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}">
+				<f:ajax execute="autor" render="tabelaAutores" />
+			</h:commandButton>
+			
+			<br />
+			<h:commandLink value="Cadastrar novo autor" action="#{livroBean.formAutor}" immediate="true"/>
+						
+			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelaAutores">
 				<h:column>
 					<h:outputText value="#{autor.nome}" />
 				</h:column>
 			</h:dataTable>
 		</fieldset>
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+		
+		<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+			<f:ajax execute="@form" render="@form :tabelaLivros" />
+		</h:commandButton>
+		
 	</h:form>
 	
-	<h:dataTable value="#{livroBean.livros}" var="livro">
+	<h:dataTable value="#{livroBean.livros}" var="livro" id="tabelaLivros">
 		<h:column>
 			<f:facet name="header">Titulo</f:facet>
 			<h:outputText value="#{livro.titulo}" />
@@ -62,7 +81,9 @@
 		</h:column>
 		<h:column>
 			<f:facet name="header">Preço</f:facet>
-			<h:outputText value="#{livro.preco}" />
+			<h:outputText value="#{livro.preco}">
+				<f:convertNumber type="currency" pattern="R$ #0.00" currencySymbol="R$" locale="pt_BR" />
+			</h:outputText>
 		</h:column>
 		<h:column>
 		  <f:facet name="header">Data</f:facet>
