--- a/livraria-orig/WebContent/_template.xhtml
+++ b/livraria-orig/WebContent/_template.xhtml
@@ -5,6 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	>
+	<h:head />
 	
 	<h:body>
 		<div id="cabecalho">
