Autorização pelo PhaseListener - Acesso as páginas Livro e Autor apenas após autenticação

--- a/livraria-orig/WebContent/autor.xhtml
+++ b/livraria-orig/WebContent/autor.xhtml
@@ -19,6 +19,8 @@
 		
 		<ui:define name="conteudo">
 		
+			<h3>E-mail logado: <h:outputText value="#{sessionScope['usuarioLogado'].email}" /></h3>
+		
 			<h:form id="autor">
 				<h:messages id="messages" />
 				<fieldset>
