--- a/livraria-orig/WebContent/livro.xhtml
+++ b/livraria-orig/WebContent/livro.xhtml
@@ -20,6 +20,8 @@
 
 		<ui:define name="conteudo">
 		
+			<h3>E-mail logado: <h:outputText value="#{sessionScope['usuarioLogado'].email}" /></h3>
+		
 			<h:form>
 				<h:messages id="messages" />
 				
