Logout e o escopo Flash para context durar no redirect

--- a/livraria-orig/WebContent/login.xhtml
+++ b/livraria-orig/WebContent/login.xhtml
@@ -15,7 +15,9 @@
 		<ui:define name="conteudo">
 		
 			<h:form id="login">
-				<h:messages id="messages" />
+			
+				<h:messages id="messages" globalOnly="true" />
+				
 				<fieldset>
 					<legend>Login</legend>
 					<h:panelGrid columns="3">
